# beam-firebird

./: beam-firebird.cabal  stack.yaml
Database/Beam/Firebird/: Connection.hs  FromRow.hs  Syntax.hs  Types.hs
